Display case intro in hero

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
           <h1 data-i18n="caseTitle">Backstage Silence</h1>
           <p class="subtitle" data-i18n="caseSubtitle">Shared-world interrogation simulator</p>
           <p id="caseHeadline" class="headline"></p>
+          <div id="caseIntro" class="case-intro"></div>
         </div>
         <div class="status">
           <div class="status-card">
